Remove build/run scripts in favor of more Maven